2000-11-05   Daiki Ueno  <ueno@unixuser.org>

	* qmtp.el (qmtp-send-package): Don't check "K" reply per recipient.
	(qmtp-via-smtp): Mark as obsolete.
	(qmtp-send-buffer): New function.

	* sasl.texi: New file.

2000-11-05   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-step-data): New function.
	(sasl-step-set-data): New function.

2000-11-04   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el: Don't require 'poe'
	- Rename `sasl-*instantiator*' to `sasl-*client*'.
	- Rename `sasl-*authenticator*' to `sasl-*mechanism*'.
	- Rename `sasl-*continuations*' to `sasl-*steps*'.
	(sasl-make-client): Accept 1st argument `mechanism'.
	(sasl-next-step): Rename from `sasl-evaluate-challenge'.

2000-11-04   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-make-instantiator): Define as function.
	(sasl-instantiator-name): Ditto.
	(sasl-instantiator-service): Ditto.
	(sasl-instantiator-server): Ditto.
	(sasl-instantiator-set-properties): Ditto.
	(sasl-instantiator-set-property): Ditto.
	(sasl-instantiator-property): Ditto.
	(sasl-instantiator-properties): Ditto.
	(sasl-authenticator-mechanism): Ditto.
	(sasl-authenticator-continuations): Ditto.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el: Rename `sasl-*principal*' to `sasl-*instantiator*'.
	(sasl-make-instantiator): Abolish optional 4th argument.
	(sasl-instantiator-set-properties): New function.
	(sasl-instantiator-put-property): New function.
	(sasl-instantiator-property): New function.
	(sasl-instantiator-properties): New function.

	* smtp.el (smtp-sasl-user-name): Rename from
	`smtp-sasl-principal-user'.
	(smtp-sasl-user-realm): Rename from `smtp-sasl-principal-realm'.

2000-11-02   Daiki Ueno  <ueno@unixuser.org>

	* sasl.el (sasl-mechanisms): Add `LOGIN' and `ANONYMOUS'.
	(sasl-mechanism-alist): Likewise.
	(sasl-error): Define.
	(sasl-login-continuations): New variable.
	(sasl-login-response-1): New function.
	(sasl-login-response-2): New function.
	(sasl-anonymous-continuations): New variable.